[package]
name = "bridge-types"
version = "0.1.0"
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-common'
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
ethbloom = { version = "0.13.0", default-features = false, features = [
  "rlp",
  "codec",
] }
ethereum-types = { version = "0.14.1", default-features = false, features = [
  "codec",
  "rlp",
  "serialize",
] }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
parity-bytes = { version = "0.1.2", default-features = false }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.188", default-features = false }
getrandom = { version = "0.2.1", features = ["js"] }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false, features = ["serde"] }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }

ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", default-features = false }
ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
serde_json = { version = "1.0", optional = true }
derivative = { version = "2.2.0", features = ["use_core"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
rand = "0.8.5"
serde_json = "1.0"

[features]
default = ["std"]
expensive_tests = []
test = ["serde_json"]
std = [
  "serde/std",
  "codec/std",
  "scale-info/std",
  "ethabi/std",
  "ethbloom/std",
  "ethereum-types/std",
  "hex/std",
  "libsecp256k1/std",
  "parity-bytes/std",
  "rlp/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-consensus-beefy/std",
  "frame-support/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
