[package]
name = "leaf-provider-rpc"
version = "0.1.0"
edition = "2021"
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-common'

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
scale-info = { version = "2", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
serde = { version = "1.0.101", features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

leaf-provider-runtime-api = { path = "../runtime-api" }
